# neurofuse

./: .gitignore  README.md  requirements.txt
configs/: ferros.yaml  ferros_cloud.yaml  hello.yaml  neurometal.yaml  remotes.yaml  synthfuse.yaml  tungsten.yaml
memory/chroma/: chroma.sqlite3
neurofuse-sdk/: pyproject.toml
neurofuse-sdk/neurofuse_sdk/: __init__.py  monitor.py
pages/: 1_Sequencer.py
plugins/ferros/: plugin.py
plugins/hello/: plugin.py
plugins/neurometal/: plugin.py
plugins/synthfuse/: plugin.py
plugins/tungsten/: plugin.py
src/: config_store.py  execution_engine.py  monitor.py  orchestrator.py  plugin_manager.py
src/agent/: server.py
src/intelligence/: architect.py
src/plugins/: base_plugin.py
src/schemas/: control_command.py  metric_sample.py  payload.py  scenario.py  system_config.py
src/ui/: dashboard.py  system_controls.py
src/ui/pages/: 2_Architect.py
src/utils/: async_helpers.py  storage.py
tests/: integration_test.py  test_distributed.py  test_neurofuse.py
